apps/lab/home-assistant/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    link.argocd.argoproj.io/external-link: https://hass.lab.ciliber.to
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lab-gateway
      namespace: envoy-gateway-system
      sectionName: https-lab
  hostnames:
    - hass.lab.ciliber.to
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: home-assistant
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-public
  namespace: home-assistant
  annotations:
    link.argocd.argoproj.io/external-link: https://hass.ciliber.to
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lab-gateway
      namespace: envoy-gateway-system
      sectionName: https-public
  hostnames:
    - hass.ciliber.to
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: home-assistant
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
